--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mouse Fighter 2</title>
+
+    <meta property="og:image" content="https://devhibou.fr/ogpics/ogmf.png" />
+    <meta
+      property="og:image:secure_url"
+      content="https://devhibou.fr/ogpics/ogmf.png"
+    />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1428" />
+    <meta property="og:image:height" content="921" />
+    <meta
+      property="og:image:alt"
+      content="l'image de mousefighter"
+    />
   </head>
   <body>
     <div id="root"></div>
